# TSF-Spy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  tsfspy.def  tsfspy.json.example
include/: class_factory.h  ditto.h  dllglobals.h  proxy_object.h  trace_object.h  util.h
src/: class_factory.cc  ditto.cc  dllmain.cc  proxy_object.cc  trace_object.cc  util.cc
src/dittos/: ITfCategoryMgr.cc  ITfCompartmentMgr.cc  ITfKeyEventSink.cc  ITfKeystrokeMgr.cc  ITfLangBarItemMgr.cc  ITfSource.cc  ITfTextInputProcessor.cc  ITfTextInputProcessorEx.cc  ITfThreadMgr.cc  ITfUIElementMgr.cc
